<resources>
    <string name="app_name">TV Shower MVP Retrofit RxJava Kotlin App</string>
    <string name="num_of_days">Number of days since premier:</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="original_image">Original Image</string>
    <string name="no_name">Sorry! You must enter a Show name\nto perform a search!</string>
    <string name="no_network">Sorry! No network connection!</string>
    <string name="no_valid_user">No Valid User</string>
    <string name="clear_text">Clear Text</string>
</resources>